hphp/test/quick/undefined-class.php.expectf

Fatal error: Class undefined: X in %s on line 4
